bugfix timeline overlap

--- a/src/Containers/App/App.scss
+++ b/src/Containers/App/App.scss
@@ -89,7 +89,8 @@ iframe.wikipedia {
   border-bottom-color: white;
 }
 .course-show {
-  height: 100vh;
+  min-height: 100vh;
+  padding-bottom: 3em;
   position: relative;
 }
 .courses-index {
